<resources>
    <string name="app_name">Quotes</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="admin_login">Admin login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading . . .</string>
    <string name="category_title">Category title</string>
    <string name="add">Add</string>
    <string name="quote_text">Quote text</string>
    <string name="select_category">Select category</string>
    <string name="admin">admin</string>
    <string name="dashboard">dashboard</string>
    <string name="edit">Edit</string>
    <string name="add_quote">Add quote</string>
    <string name="add_category">Add category</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_from_favorite">deleted from favorite</string>
    <string name="copied_ext">Copied Text</string>
    <string name="quote">Quote</string>
    <string name="title_cant_be_empty">Title can\'t be empty</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="category_added_successfully">Category added successfully</string>
    <string name="category_doesnt_selected">Category does\'nt selected</string>
    <string name="quote_cant_be_empty">Quote text can\'t be empty</string>
    <string name="quotes_added_successfully">Quotes added successfully</string>
    <string name="save_changes">Save changes</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="update_failed">Update failed</string>
    <string name="category_may_be_not_exist">This category may be not exist</string>
    <string name="quote_may_be_not_exist">This quote may be not exist</string>
    <string name="password_cant_be_empty">password can\'t be empty</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="email_cant_be_empty">Email can\'t be empty</string>
    <string name="signing_in">Signing in...</string>
    <string name="signed_in">Signed in</string>
    <string name="username_password_not_correct">Username or password does not correct</string>
    <string name="signing_out">Signing out...</string>
    <string name="added_to_favorite">added to favorite</string>
    <string name="delete_quote">Delete Quote</string>
    <string name="are_you_sure_delete">Are you sure to delete this Quote?</string>
    <string name="delete">Delete</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="cancel">Cancel</string>
    <string name="delete_category">Delete Category</string>
    <string name="are_you_sure_delete_category">Are you sure to delete this Category? , when you delete this category all quotes in it will be deleted</string>
    <string name="email">Email</string>
    <string name="required">* Required</string>
    <string name="quote_num"> Quote</string>
    <string name="no_data_found">No Quotes added</string>
    <string name="retry">Retry</string>
    <string name="dark_mode">Dark mode</string>
</resources>