<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/a_mi_add_quote"
            android:title="@string/add_quote"
            android:icon="@drawable/ic_add"
            android:iconTint="@color/black"/>

        <item
            android:id="@+id/a_mi_add_category"
            android:title="@string/add_category"
            android:iconTint="@color/black"
            android:icon="@drawable/ic_add"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mi_dark_theme"
            android:title="@string/dark_mode"
            android:icon="@drawable/ic_dark"
            />

        <item
            android:id="@+id/mi_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mi_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>