<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.addQuoteFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/lo_quote_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:endIconMode="clear_text"
        app:hintTextColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_quote_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quote_text"
            app:hintTextColor="?attr/colorPrimary"
            android:gravity="top|start"
            android:lines="3"
            android:maxEms="14" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:hintTextColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo_quote_text">

        <AutoCompleteTextView
            android:id="@+id/ed_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:hintTextColor="?attr/colorPrimary"
            android:hint="@string/select_category" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_add_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        android:paddingVertical="8dp"
        android:textAllCaps="false"
        android:visibility="visible"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo_category"/>

</androidx.constraintlayout.widget.ConstraintLayout>